Implemented sorting by year.

Option -d dumps records to the current log file instead of stderr.

Fixes for compilation on cygwin.

Z39.50 client code uses pz:elements. pz:elements was recognized in
earlier Pazpar2 versions but it was not used for anything.

icu_chain_test is using fgets instead of getline - fixes compilation
on MacOSX .

Loosen the CCL query parsing so that Pazpar2 only returns error if _all_
query conversions fail (rather than _any_). This means targets that do
not support some fields are ignored in a search.

--- 1.0.1 2007/07/03

Improved handling of socket timeout for Z39.50 connections. 

Misc documentation updates and spell fixes.

Debian package pazpar2 creates log rotate entry.

Debian package pazpar2-apache2 reloads Apache2.

jsdemo included in distribution. It illustrates the use of the js/pz2.js
JavaScript library.

--- 1.0.0 2007/06/20

First public release.
