@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <pazpar2 xmlns="http://www.indexdata.com/pazpar2/1.0">
-<!-- $Id: test_http.cfg,v 1.4 2007-07-30 11:52:08 quinn Exp $ -->
+<!-- $Id: test_http.cfg,v 1.5 2007-07-31 22:35:41 quinn Exp $ -->
 <!-- Used by test_http.sh -->
 <server>
   <listen port="9763"/>
@@ -20,6 +20,8 @@
     <metadata name="description" brief="yes" merge="longest" rank="3"/>
 
     <metadata name="test-usersetting" brief="yes" setting="postproc"/>
+    <metadata name="test" setting="parameter"/>
+    <metadata name="test_usersetting_2" brief="yes"/>
   </service>
 </server>
 
