@@ -9,11 +9,15 @@
 <md-author>Jack Collins</md-author>
 <md-id>11224467</md-id>
 <md-lccn>11224467</md-lccn>
-<md-test-usersetting>XXXXXXXXXX</md-test-usersetting></location>
+<md-test-usersetting>XXXXXXXXXX</md-test-usersetting>
+<md-test_usersetting_2>Shit: 
+        YYYYYYYYY</md-test_usersetting_2></location>
 <location id="z3950.indexdata.com/marc" name="Local Test">
 <md-title>How to program a computer</md-title>
 <md-author>Jack Collins</md-author>
 <md-id>11224466</md-id>
 <md-lccn>11224466</md-lccn>
-<md-test-usersetting>XXXXXXXXXX</md-test-usersetting></location>
+<md-test-usersetting>XXXXXXXXXX</md-test-usersetting>
+<md-test_usersetting_2>Shit: 
+        YYYYYYYYY</md-test_usersetting_2></location>
 </record>
